--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Webpage -1</title>
   </head>
   <body>
-    This is my firts web page
+    This is my firts web page added for new commit
   </body>
   <script src="./app.js"></script>
 </html>
